kubernetes/grimmory/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: grimmory
  namespace: grimmory

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: grimmory
  template:
    metadata:
      labels:
        app: grimmory
    spec:
      securityContext:
        fsGroup: 10001
      containers:
      - name: grimmory
        image: grimmory/grimmory:v3.5.0@sha256:bf6fe21c6e247597f7869664a440b5a34242e2d2940575cae39c17bfaa66dc0b
        ports:
        - containerPort: 6060
          name: http
        volumeMounts:
        - name: data
          mountPath: /app/data
        - name: books
          mountPath: /books
        - name: bookdrop
          mountPath: /bookdrop
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: grimmory-data
      - name: books
        nfs:
          server: fs2.oneill.net
          path: /volume2/shared/books/grimmory
      - name: bookdrop
        nfs:
          server: fs2.oneill.net
          path: /volume2/shared/downloads/grimmory-ingestion
