kubernetes/grimmory/mariadb-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: grimmory-mariadb
  namespace: grimmory

spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: grimmory-mariadb
  template:
    metadata:
      labels:
        app: grimmory-mariadb
    spec:
      containers:
      - name: grimmory-mariadb
        image: mariadb:11.8@sha256:6422478cb8e159f080fb1d8ccf65101e26fe51385787fde7d16c3b165a331f15
        ports:
        - containerPort: 3306
          name: mysql
        readinessProbe:
          exec:
            command:
            - healthcheck.sh
            - --connect
            - --innodb_initialized
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 6
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: grimmory-mariadb-data
