kubernetes/grimmory/mariadb-service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: grimmory-mariadb
  namespace: grimmory

spec:
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
    name: mysql
  selector:
    app: grimmory-mariadb
