kubernetes/grimmory/service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: grimmory
  namespace: grimmory

spec:
  type: ClusterIP
  ports:
  - port: 6060
    targetPort: 6060
    name: http
  selector:
    app: grimmory
