kubernetes/grimmory/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: grimmory
  namespace: grimmory
  annotations:
    cert-manager.io/cluster-issuer: zerossl
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: Grimmory
    gethomepage.dev/description: Book Library Manager
    gethomepage.dev/group: Media
    gethomepage.dev/icon: mdi-bookshelf
    gethomepage.dev/pod-selector: app=grimmory
    ak-type: oidc
    ak-oidc-callback: /oauth2-callback
    ak-oidc-client-type: public
    ak-path-exclude: /api(/|$)

spec:
  tls:
  - hosts:
    - grimmory.k.oneill.net
    secretName: grimmory-tls
  rules:
  - host: grimmory.k.oneill.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grimmory
            port:
              number: 6060
